--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,12 @@ spring.mvc.view.suffix=.html
 spring.thymeleaf.cache=false
 server.tomcat.access_log_enabled=true
 server.tomcat.basedir:target/tomcat
+
+# JPA MYSQL
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/spring?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+# spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql: true
