--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.mvc.view.suffix=.html
  
 # thymeleaf缓存设置
 spring.thymeleaf.cache=false
-server.tomcat.access_log_enabled=true
+server.tomcat.accesslog.buffered=true
 server.tomcat.basedir:target/tomcat
 
 # JPA MYSQL
