--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,9 @@ spring.datasource.password=root
 # spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
-
+spring.application.name='HG'
 
 # logging.file.name=demo.log
-logging.pattern.console=%d{yyyy-MM-dd} %thread %-5level %logger{50} - %msg%n
+logging.pattern.console=%date{yyyy-MM-dd} %thread %-5level %logger{50} - %msg%n
 # logging.pattern.file=   %d{yyyy-MM-dd HH:mm:ss.SSS} %thread %-5leve %logger{50} - %msg%n
 # path: logs/log_lzy
