--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,25 @@ spring.datasource.password=root
 # spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
-spring.application.name='HG'
+spring.application.name=HG
 
 # logging.file.name=demo.log
 logging.pattern.console=%date{yyyy-MM-dd} %thread %-5level %logger{50} - %msg%n
 # logging.pattern.file=   %d{yyyy-MM-dd HH:mm:ss.SSS} %thread %-5leve %logger{50} - %msg%n
 # path: logs/log_lzy
+
+
+# 账号
+spring.mqtt.username=admin
+# 密码
+spring.mqtt.password=public
+# mqtt连接tcp地址
+spring.mqtt.hostUrl=tcp://localhost:1883
+# 客户端Id，每个启动的id要不同
+spring.mqtt.clientId=test
+# 默认主题
+spring.mqtt.defaultTopic=test
+# 超时时间
+spring.mqtt.timeout=100
+# 保持连接数
+spring.mqtt.keepalive=100
