--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,16 @@ spring.mqtt.defaultTopic=test
 spring.mqtt.timeout=100
 # 保持连接数
 spring.mqtt.keepalive=100
+
+data.lastName=hello
+data.age=18
+data.boss=false
+data.birth=1986/12/12
+
+#map 
+data.person.name=fhh
+data.person.sex=woman
+data.person.age=35
+data.person.url=www.doi.com
+#list 
+data.list=apple0,apple1,apple2
