--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ logging.pattern.console=%date{yyyy-MM-dd} %thread %-5level %logger{50} - %msg%n
 # logging.pattern.file=   %d{yyyy-MM-dd HH:mm:ss.SSS} %thread %-5leve %logger{50} - %msg%n
 # path: logs/log_lzy
 
-
+com.hg.hyy.test=test
 # 账号
 spring.mqtt.username=admin
 # 密码
@@ -51,3 +51,11 @@ data.person.age=35
 data.person.url=www.doi.com
 #list 
 data.list=apple0,apple1,apple2
+
+
+management.endpoint.shutdown.enabled=true
+management.endpoints.web.exposure.include=health,info,shutdown
+
+# CORS Support
+management.endpoints.web.cors.allowed-origins=https://example.com
+management.endpoints.web.cors.allowed-methods=GET,POST
