--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,3 +59,33 @@ management.endpoints.web.exposure.include=health,info,shutdown
 # CORS Support
 management.endpoints.web.cors.allowed-origins=https://example.com
 management.endpoints.web.cors.allowed-methods=GET,POST
+
+
+# 配置说明：
+# server.port：配置 Web 容器的端口号（默认为 8080）
+# server.error.path：配置当前项目出错时跳转去的页面。
+# server.servlet.session.timeout：配置 session 失效时间。30m 表示 30 分钟，如果不写单位则默认单位是秒。（注意：由于 Tomcat 中配置 session 过期时间是以分钟为单位，如果我们这里设置是秒的话，那么会自动转换为一个不超过所配置秒数的最大分钟数。比如配置了 119 秒，那么实际 session 过期时间是 1 分钟）
+# server.servlet.context-path：配置项目名称（默认为 /），如果配置了项目名称，那么在访问路径中要加上配置的路径
+# server.tomcat.uri-encoding：配置 Tomcat 请求编码
+# server.tomcat.max-threads：配置 Tomcat 的最大线程数
+# server.tomcat.basedir：配置 Tomcat 运行日志和临时文件的目录。若不配置，则默认使用系统的临时目录。
+
+
+# server.error.path=/error
+# server.servlet.session.timeout=30m
+# server.tomcat.uri-encoding=utf-8
+# server.tomcat.max-threads=500
+
+
+
+logging.level.web=DEBUG
+# debug=true
+# server.port=0
+server.ssl.key-store=keystore.p12
+server.ssl.key-alias=tomcathttps
+server.ssl.keyStoreType=PKCS12
+server.ssl.key-store-password=111111
+# server.servlet.context-path=/ws
+
+
+spring.profiles.active=dev
