--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -81,7 +81,7 @@ management.endpoints.web.cors.allowed-methods=GET,POST
 logging.level.web=DEBUG
 # debug=true
 # server.port=0
-server.ssl.key-store=keystore.p12
+server.ssl.key-store=hyy.p12
 server.ssl.key-alias=tomcathttps
 server.ssl.keyStoreType=PKCS12
 server.ssl.key-store-password=111111
