--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -67,7 +67,7 @@ management.endpoint.shutdown.enabled=true
 management.endpoints.web.exposure.include=health,info,shutdown
 
 # CORS Support
-management.endpoints.web.cors.allowed-origins=http://localhost:8080
+management.endpoints.web.cors.allowed-origins=http://localhost:8090
 management.endpoints.web.cors.allowed-methods=GET,POST
 
 
@@ -79,9 +79,9 @@ management.endpoints.web.cors.allowed-methods=GET,POST
 
 
 # server.port=0
-server.ssl.key-store=hyy.p12
-server.ssl.key-alias=tomcathttps
-server.ssl.keyStoreType=PKCS12
-server.ssl.key-store-password=111111
+# server.ssl.key-store=hyy.p12
+# server.ssl.key-alias=tomcathttps
+# server.ssl.keyStoreType=PKCS12
+# server.ssl.key-store-password=111111
 
 
