--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.application.name=HG
 
 
 # 日志级别
-logging.level.web=DEBUG
+# logging.level.web=DEBUG
 # debug=true
 
 # logging.file.name=demo.log
