--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,17 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+	<!-- json -->
 		<dependency>
 			<groupId>net.sf.json-lib</groupId>
 			<artifactId>json-lib</artifactId>
 			<version>2.4</version>
 			<classifier>jdk15</classifier>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.78</version>
 		</dependency>
 
 		<!-- validation -->
