--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,10 @@ spring.mvc.view.suffix=.html
 spring.thymeleaf.cache=false
 server.tomcat.accesslog.buffered=true
 server.tomcat.basedir:target/tomcat
-
+server.tomcat.accesslog.directory=logs
+server.tomcat.accesslog.enabled = true
+server.tomcat.accesslog.prefix=vue
+server.tomcat.accesslog.pattern=%t %a %r %s (%D ms)
 # JPA MYSQL
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/spring?serverTimezone=UTC
