--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -88,3 +88,6 @@ server.ssl.keyStoreType=PKCS12
 server.ssl.key-store-password=111111
 
 
+spring.devtools.restart.log-condition-evaluation-delta=false
+
+spring.devtools.restart.exclude=static/**,public/**
