--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,8 @@ spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
 spring.application.name=HG
 
-
+# spring.main.sources=com.example.MyDatabaseConfig,com.example.MyJmsConfig
+# spring.main.banner-mode=console
 # 日志级别
 # logging.level.web=DEBUG
 # debug=true
@@ -31,7 +32,7 @@ logging.pattern.console=%date{yyyy-MM-dd} %thread %-5level %logger{50} - %msg%n
 # logging.pattern.file=   %d{yyyy-MM-dd HH:mm:ss.SSS} %thread %-5leve %logger{50} - %msg%n
 # path: logs/log_lzy
 
-com.hg.hyy.test=test
+
 # 账号
 spring.mqtt.username=admin
 # 密码
@@ -46,6 +47,11 @@ spring.mqtt.defaultTopic=test
 spring.mqtt.timeout=100
 # 保持连接数
 spring.mqtt.keepalive=100
+
+
+# environment读取配置
+com.hg.hyy.test=test
+
 
 # ====参数读取配置=====
 # string
