--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,11 +14,21 @@ server.tomcat.accesslog.pattern=%t %a %r %s (%D ms)
 # JPA MYSQL
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/spring?serverTimezone=UTC
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
-# spring.datasource.driver-class-name =com.mysql.jdbc.Driver
-spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+
+spring.sql.init.schema-locations=classpath:db/schema.sql
+spring.sql.init.data-locations=classpath:db/data.sql
+#H2控制台启用
+spring.h2.console.enabled=true
 #spring.jpa.show-sql: true
+spring.h2.console.path=/h2
+
+# 下划线转化为驼峰命名
+mybatis.configuration.map-underscore-to-camel-case=true
+
+
 spring.application.name=HG
 
 # spring.main.sources=com.example.MyDatabaseConfig,com.example.MyJmsConfig
