--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,11 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
-    <!-- spring session的依赖 -->
-<dependency>
-    <groupId>org.springframework.session</groupId>
-    <artifactId>spring-session-data-redis</artifactId>
-</dependency>
+        <!-- spring session的依赖 -->
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
         <!--IP地址解析城市名依赖-->
         <dependency>
             <groupId>com.maxmind.geoip2</groupId>
@@ -102,6 +102,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-rest</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
