--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,47 +2,39 @@
 spring.mvc.view.prefix=classpath:/templates/
 # 给返回的页面添加后缀名，spring boot默认为.html
 spring.mvc.view.suffix=.html
- spring.profiles.active=dev
+spring.profiles.active=dev
 # thymeleaf缓存设置
 spring.thymeleaf.cache=false
 server.tomcat.accesslog.buffered=true
 server.tomcat.basedir:target/tomcat
 server.tomcat.accesslog.directory=logs
-server.tomcat.accesslog.enabled = true
+server.tomcat.accesslog.enabled=true
 server.tomcat.accesslog.prefix=vue
 server.tomcat.accesslog.pattern=%t %a %r %s (%D ms)
 # JPA MYSQL
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/spring?serverTimezone=UTC
-spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
-
 spring.sql.init.schema-locations=classpath:db/schema.sql
 spring.sql.init.data-locations=classpath:db/data.sql
 #H2控制台启用
 spring.h2.console.enabled=true
 #spring.jpa.show-sql: true
 spring.h2.console.path=/h2
-
 # 下划线转化为驼峰命名
 mybatis.configuration.map-underscore-to-camel-case=true
-
-
 spring.application.name=HG
-
 # spring.main.sources=com.example.MyDatabaseConfig,com.example.MyJmsConfig
 # spring.main.banner-mode=console
 # 日志级别
 # logging.level.web=DEBUG
 # debug=true
-
 # logging.file.name=demo.log
 logging.pattern.console=%date{yyyy-MM-dd} %thread %-5level %logger{50} - %msg%n
 # logging.pattern.file=   %d{yyyy-MM-dd HH:mm:ss.SSS} %thread %-5leve %logger{50} - %msg%n
 # path: logs/log_lzy
-
-
 # 账号
 spring.mqtt.username=admin
 # 密码
@@ -57,53 +49,37 @@ spring.mqtt.defaultTopic=test
 spring.mqtt.timeout=100
 # 保持连接数
 spring.mqtt.keepalive=100
-
-
 # environment读取配置
 com.hg.hyy.test=test
-
-
 # ====参数读取配置=====
 # string
 data.lastName=hello
 data.age=18
 data.boss=false
 data.birth=1986/12/12
-
-#map 
+#map
 data.person.name=fhh
 data.person.sex=woman
 data.person.age=35
 data.person.url=www.doi.com
-
-#list 
+#list
 data.list=apple0,apple1,apple2
-
-
-
-
 management.endpoint.shutdown.enabled=true
 management.endpoints.web.exposure.include=health,info,shutdown
-
 # CORS Support
 management.endpoints.web.cors.allowed-origins=http://localhost:8090
 management.endpoints.web.cors.allowed-methods=GET,POST
-
-
 # server.servlet.context-path=/ws
 # server.error.path=/error
 # server.servlet.session.timeout=30m
 # server.tomcat.uri-encoding=utf-8
 # server.tomcat.max-threads=500
-
-
 # server.port=0
 server.ssl.key-store=hyy.p12
 server.ssl.key-alias=tomcathttps
 server.ssl.keyStoreType=PKCS12
 server.ssl.key-store-password=111111
-
-
 spring.devtools.restart.log-condition-evaluation-delta=false
-
 spring.devtools.restart.exclude=static/**,public/**
+spring.servlet.multipart.max-file-size=128KB
+spring.servlet.multipart.max-request-size=128KB
