--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -75,7 +75,7 @@ management.endpoints.web.cors.allowed-methods=GET,POST
 # server.tomcat.uri-encoding=utf-8
 # server.tomcat.max-threads=500
 # server.port=0
-server.ssl.key-store=hyy.p12
+server.ssl.key-store=classpath:hyy.p12
 server.ssl.key-alias=tomcathttps
 server.ssl.keyStoreType=PKCS12
 server.ssl.key-store-password=111111
