--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
+        <!--    influxdb    -->
+        <dependency>
+            <groupId>com.influxdb</groupId>
+            <artifactId>influxdb-client-java</artifactId>
+            <version>3.4.0</version>
+        </dependency>
         <!-- spring session的依赖 -->
         <dependency>
             <groupId>org.springframework.session</groupId>
@@ -310,10 +316,10 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>org.apache.maven.plugins</groupId>-->
+        <!--            <artifactId>maven-compiler-plugin</artifactId>-->
+        <!--        </dependency>-->
 
     </dependencies>
 
